--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,8 +7,15 @@
     <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
-
     <string name="menu_home">Home</string>
     <string name="menu_gallery">Gallery</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="planets_array">
+        <item>Мастер</item>
+        <item>Юр.лицо</item>
+    </string>
+    <string-array name="planets_array">
+        <item>Мастер</item>
+        <item>Юр.лицо</item>
+    </string-array>
 </resources>
